<resources>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="shopping">Shopping</string>
    <string name="school">School</string>

    <string name="app_name">ToDoApp</string>
    <string name="addedit_clock_image_button_description">Change hour</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="addeidt_category_selector_action_label">Pick a category</string>
    <string name="date">Date</string>
    <string name="add_new_item">Add a new task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="add">Add a new task</string>
    <string name="edit">Edit task</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="save_error">Error occurred during saving</string>
    <string name="try_again">Try again</string>
    <string name="delete_completed">Delete completed</string>
    <string name="delete_completed_message">Are you sure you want to delete all completed tasks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty">Empty, nothing left to do!</string>
    <string name="cannot_delete_message">Nothing to delete!</string>
    <string name="tasks">Tasks</string>
    <string name="save_new_item">Save new item</string>
    <string name="app_theme">Theme</string>
    <string name="auto">System theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>