<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_navigate_to_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_asc"
                android:title="@string/ascending" />
            <item
                android:id="@+id/action_sort_desc"
                android:title="@string/descending" />
        </menu>

    </item>

    <item
        android:id="@+id/action_delete_completed"
        android:title="@string/delete_completed"
        app:showAsAction="never" />

</menu>