<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addedit_name_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addedit_name_edit_text"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:id="@+id/category_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/addeidt_category_selector_action_label"
                android:imeOptions="flagNoExtractUi"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/date_selector_edit_text"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:clickable="true"
                android:imeOptions="flagNoExtractUi"
                android:inputType="none"
                tools:ignore="KeyboardInaccessibleWidget" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</RelativeLayout>